# MEBeauty-database

./: .gitignore  README.md  UV_USAGE.md  evaluate_models.py  inspect_predictions.py  pyproject.toml  pytorch_mebeauty_dataset.py  pytorch_predict.py  pytorch_train_val.py  scut_model.py  web_app.py  外貌協會AI相機研究計畫.md
pytorch_trained_models/: model_ranking.csv  prediction_inspection.csv  training_history.csv
webapp/: app.js  index.html  styles.css
